<resources>
    <string name="app_name">Lab3</string>
    <string name="profile">Your Profile</string>
    <string name="name">Enter you Name:</string>
    <string name="Picture">Your Picture:</string>
    <string name="takePic">Click the button above to take a picture!</string>
    <string name="email">What is your email address:</string>
    <string name="typeEmail">Type email here</string>
    <string name="password">Type your password:</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="type_here">Type Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>